--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -37,7 +37,7 @@
 .custom-button.secondary {
     background-color: var(--background-primary);
     color: var(--color-secondary);
-    border: 1px solid var(--color-secondary);
+    border: 1px solid var(--color-primary);
 }
 
 /* Hover opcional */
@@ -51,4 +51,7 @@
     background-color: var(--background-secondary);
     border: 1px solid var(--color-secondary);
     color: var(--background-primary);
+}
+.custom-button :disabled{
+    cursor: no-drop;
 }
