--- a/src/styles/components/cardWork.css
+++ b/src/styles/components/cardWork.css
@@ -1,19 +1,14 @@
-.card-work-container{
-    min-width: 450px;
-    min-height: 400px;
-    border-radius: 24px;
-}
-
 .card {
-    min-width: 450px;
+    flex: 0 0 calc((100% - (20px * 2)) / 3); 
     min-height: 400px;
     background: var(--background-primary);
     border-radius: 10px;
-    padding: 50px 30px;
+    /* padding: 15px 30px 50px 30px; */
     position: relative;
     overflow: hidden;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
+    row-gap: 10px;
     box-shadow: 0 0 10px #4445;
     cursor: pointer;
     transition: all 0.4s ease-in-out;
@@ -25,20 +20,20 @@
     position: relative;
     z-index: 5;
     transition: all 0.5s;
+    text-align: center;
   }
   
   
   .heading {
     font-size: 20px;
     font-weight: 800;
-    margin-bottom: 20px;
   }
   
   .number {
     position: absolute;
     top: -90px;
     right: -85px;
-    padding: 80px 100px 30px 30px;
+    padding: 80px 100px 15px 30px;
     background: var(--background-secondary);
     border-radius: 100%;
     z-index: 5;
@@ -79,8 +74,57 @@
   }
   
   .card:hover .heading,
-  .card:hover .content {
+  .card:hover .content, 
+  .card:hover svg{
     color: #f5f5f5;
     fill: #f5f5f5;
   }
+  /* .card:hover .card-img-work{
+    filter: grayscale();
+    z-index: 6;
+  } */
+  .card:hover img{
+    filter: invert(1);
+  }
+  .card-box-links{
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    background-color: transparent;
+    bottom: 0;
+    z-index: 5;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
   
+  .card-link{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: aqua;
+  }
+
+  .card-img-work{
+    width: 100%;
+    height: 220px;
+    border-radius: 15px;
+    background-image: url(../../../public/images/solventa.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+  }
+
+  @media (max-width: 992px) {
+    .card {
+      flex: 0 0 calc((100% - 20px) / 2); /* 2 columnas */
+    }
+  }
+  
+  @media (max-width: 576px) {
+    .card {
+      flex: 0 0 100%; /* 1 columna */
+    }
+  }
