--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -40,47 +40,212 @@
     font-size: clamp(1rem, 20px, 6rem);
 }
 
-.ocean { 
-    height: 5%;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: #015871;
-    filter: grayscale(100%) brightness(0.4); 
-}
-
-.wave {
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg) repeat-x; 
-    position: absolute;
-    top: -198px;
-    width: 6400px;
-    height: 198px;
-    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) infinite;
-    transform: translate3d(0, 0, 0);
-    filter: grayscale(100%) brightness(0.4); 
-}
-
-.wave:nth-of-type(2) {
-    top: -175px;
-    animation: wave 7s cubic-bezier( 0.36, 0.45, 0.63, 0.53) -.125s infinite, swell 7s ease -1.25s infinite;
-    opacity: 1;
-}
-
-@keyframes wave {
-    0% {
-        margin-left: 0;
-    }
+/* @keyframes move {
     100% {
-        margin-left: -1600px;
+        transform: translate3d(0, 0, 1px) rotate(360deg);
     }
 }
 
-@keyframes swell {
-    0%, 100% {
-        transform: translate3d(0,-25px,0);
-    }
-    50% {
-        transform: translate3d(0,5px,0);
-    }
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: #f5f5f5;
+    overflow: hidden;
 }
+
+.background span {
+    width: 20vmin;
+    height: 20vmin;
+    border-radius: 20vmin;
+    backface-visibility: hidden;
+    position: absolute;
+    animation: move;
+    animation-duration: 45;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+
+.background span:nth-child(0) {
+    color: gray;
+    top: 9%;
+    left: 38%;
+    animation-duration: 44s;
+    animation-delay: -1s;
+    transform-origin: -8vw -24vh;
+    box-shadow: -40vmin 0 5.2124025094441295vmin currentColor;
+}
+.background span:nth-child(1) {
+    color: gray;
+    top: 58%;
+    left: 96%;
+    animation-duration: 7s;
+    animation-delay: -35s;
+    transform-origin: 21vw -11vh;
+    box-shadow: -40vmin 0 5.084427086605195vmin currentColor;
+}
+.background span:nth-child(2) {
+    color: gray;
+    top: 15%;
+    left: 47%;
+    animation-duration: 31s;
+    animation-delay: -3s;
+    transform-origin: -4vw -24vh;
+    box-shadow: 40vmin 0 5.877729121193765vmin currentColor;
+}
+.background span:nth-child(3) {
+    color: gray;
+    top: 52%;
+    left: 89%;
+    animation-duration: 17s;
+    animation-delay: -48s;
+    transform-origin: -21vw 25vh;
+    box-shadow: -40vmin 0 5.8259532603451305vmin currentColor;
+}
+.background span:nth-child(4) {
+    color: gray;
+    top: 39%;
+    left: 48%;
+    animation-duration: 38s;
+    animation-delay: -23s;
+    transform-origin: -17vw 21vh;
+    box-shadow: 40vmin 0 5.81632662690532vmin currentColor;
+}
+.background span:nth-child(5) {
+    color: gray;
+    top: 98%;
+    left: 56%;
+    animation-duration: 41s;
+    animation-delay: -18s;
+    transform-origin: 25vw 6vh;
+    box-shadow: 40vmin 0 5.267588872378778vmin currentColor;
+}
+.background span:nth-child(6) {
+    color: gray;
+    top: 49%;
+    left: 15%;
+    animation-duration: 51s;
+    animation-delay: -2s;
+    transform-origin: -24vw 23vh;
+    box-shadow: -40vmin 0 5.777508642017072vmin currentColor;
+}
+.background span:nth-child(7) {
+    color: gray;
+    top: 59%;
+    left: 8%;
+    animation-duration: 24s;
+    animation-delay: -33s;
+    transform-origin: 7vw 17vh;
+    box-shadow: -40vmin 0 5.348406444180407vmin currentColor;
+}
+.background span:nth-child(8) {
+    color: gray;
+    top: 70%;
+    left: 13%;
+    animation-duration: 33s;
+    animation-delay: -26s;
+    transform-origin: 11vw 7vh;
+    box-shadow: 40vmin 0 5.332370430906442vmin currentColor;
+}
+.background span:nth-child(9) {
+    color: gray;
+    top: 43%;
+    left: 61%;
+    animation-duration: 43s;
+    animation-delay: -41s;
+    transform-origin: 4vw 22vh;
+    box-shadow: -40vmin 0 5.238840504182861vmin currentColor;
+}
+.background span:nth-child(10) {
+    color: gray;
+    top: 18%;
+    left: 99%;
+    animation-duration: 52s;
+    animation-delay: -45s;
+    transform-origin: -12vw 6vh;
+    box-shadow: 40vmin 0 5.376977411102772vmin currentColor;
+}
+.background span:nth-child(11) {
+    color: gray;
+    top: 91%;
+    left: 64%;
+    animation-duration: 33s;
+    animation-delay: -12s;
+    transform-origin: 6vw 6vh;
+    box-shadow: -40vmin 0 5.5619387074820725vmin currentColor;
+}
+.background span:nth-child(12) {
+    color: gray;
+    top: 32%;
+    left: 63%;
+    animation-duration: 29s;
+    animation-delay: -10s;
+    transform-origin: 5vw 12vh;
+    box-shadow: 40vmin 0 5.653037017462888vmin currentColor;
+}
+.background span:nth-child(13) {
+    color: gray;
+    top: 46%;
+    left: 5%;
+    animation-duration: 49s;
+    animation-delay: -37s;
+    transform-origin: 21vw -20vh;
+    box-shadow: 40vmin 0 5.5463091706740775vmin currentColor;
+}
+.background span:nth-child(14) {
+    color: gray;
+    top: 80%;
+    left: 33%;
+    animation-duration: 15s;
+    animation-delay: -19s;
+    transform-origin: -16vw 13vh;
+    box-shadow: -40vmin 0 5.153359139266912vmin currentColor;
+}
+.background span:nth-child(15) {
+    color: gray;
+    top: 10%;
+    left: 74%;
+    animation-duration: 27s;
+    animation-delay: -31s;
+    transform-origin: 18vw 24vh;
+    box-shadow: -40vmin 0 5.380090147733779vmin currentColor;
+}
+.background span:nth-child(16) {
+    color: gray;
+    top: 30%;
+    left: 30%;
+    animation-duration: 11s;
+    animation-delay: -15s;
+    transform-origin: -18vw -10vh;
+    box-shadow: -40vmin 0 5.369864727357108vmin currentColor;
+}
+.background span:nth-child(17) {
+    color: gray;
+    top: 71%;
+    left: 54%;
+    animation-duration: 19s;
+    animation-delay: -26s;
+    transform-origin: -24vw 21vh;
+    box-shadow: -40vmin 0 5.646873629155687vmin currentColor;
+}
+.background span:nth-child(18) {
+    color: gray;
+    top: 94%;
+    left: 92%;
+    animation-duration: 27s;
+    animation-delay: -37s;
+    transform-origin: -21vw -15vh;
+    box-shadow: 40vmin 0 5.66124278683777vmin currentColor;
+}
+.background span:nth-child(19) {
+    color: gray;
+    top: 62%;
+    left: 59%;
+    animation-duration: 15s;
+    animation-delay: -18s;
+    transform-origin: -4vw -15vh;
+    box-shadow: -40vmin 0 5.034389770178651vmin currentColor;
+} */
