--- a/src/styles/works.css
+++ b/src/styles/works.css
@@ -1,10 +1,19 @@
-.works-container{
+.works-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     gap: 25px;
     min-height: 100vh;
 }
-.works-box-top h1{
+
+.works-box-top h1 {
     font-size: clamp(18px, 40px, 5rem);
+    margin-bottom: 50px;
+    color: var(--background-secondary);
+}
+
+.works-container-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
 }
