--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,6 @@
 .container-contact{
-    height: 40vh;
+    height: auto;
+    background-color: var(--color-secondary);
 }
 .col-contact{
     width: 100%;
@@ -11,18 +12,15 @@
     gap: 3rem;
 }
 
-.col-contact h1,h2,p{
-    color: var(--color-secondary);
-}
 
 .col-contact h2{
     font-size: 30px;
 }
 .col-contact h1{
-    font-size: 80px;
+    font-size: clamp(18px, 40px, 5rem);
 }
 .col-contact p{
-    font-size: 20px;
+    font-size: clamp(12px, 18px, 5rem);
 }
 .box-info{
     width: 100%;
@@ -32,4 +30,15 @@
     align-items: center;
     gap: 5rem;
     text-align: center;
+}
+
+@media (width < 576px) {
+    .container-contact{
+        height: auto;
+        text-align: center;
+    }
+    .box-info{
+        flex-direction: column;
+        gap: 2rem;
+    }
 }
