--- a/src/styles/components/cardWork.css
+++ b/src/styles/components/cardWork.css
@@ -1,130 +1,82 @@
-.card {
-    flex: 0 0 calc((100% - (20px * 2)) / 3); 
-    min-height: 400px;
-    background: var(--background-primary);
-    border-radius: 10px;
-    /* padding: 15px 30px 50px 30px; */
-    position: relative;
-    overflow: hidden;
-    align-items: center;
-    justify-content: start;
-    row-gap: 10px;
-    box-shadow: 0 0 10px #4445;
-    cursor: pointer;
-    transition: all 0.4s ease-in-out;
-  }
-  
-  
-  .heading,
-  .content {
-    position: relative;
-    z-index: 5;
-    transition: all 0.5s;
-    text-align: center;
-  }
-  
-  
-  .heading {
-    font-size: 20px;
-    font-weight: 800;
-  }
-  
-  .number {
-    position: absolute;
-    top: -90px;
-    right: -85px;
-    padding: 80px 100px 15px 30px;
-    background: var(--background-secondary);
-    border-radius: 100%;
-    z-index: 5;
-  }
-  
-  .number .text {
-    font-size: 28px;
-    font-weight: 600;
-    color: var(--color-primary);
-  }
-  
-  .text {
-    margin-top: 20px;
-  }
-  
-  .number::after {
-    content: "";
-    width: 50px;
-    height: 50px;
-    background: var(--background-secondary);
-    position: absolute;
-    border-radius: 100%;
-    top: 50%;
-    right: 50%;
-    transition: all 0.5s;
-    transform: translateX(50%) translateY(-50%);
-    z-index: -1;
-  }
-  
-  .card:hover {
-    scale: 1.02;
-    box-shadow: 0 5px 20px #444e;
-  }
-  
-  .card:hover .number::after {
-    width: 1500px;
-    height: 1500px;
-  }
-  
-  .card:hover .heading,
-  .card:hover .content, 
-  .card:hover svg{
-    color: #f5f5f5;
-    fill: #f5f5f5;
-  }
-  /* .card:hover .card-img-work{
-    filter: grayscale();
-    z-index: 6;
-  } */
-  .card:hover img{
-    filter: invert(1);
-  }
-  .card-box-links{
-    position: absolute;
-    width: 100%;
-    height: 70px;
-    background-color: transparent;
-    bottom: 0;
-    z-index: 5;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-  }
-  
-  .card-link{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: aqua;
-  }
+.custom-card {
+  flex: 0 0 calc((100% - (20px * 2)) / 2);
+  border-radius: 15px;
+}
 
-  .card-img-work{
-    width: 100%;
-    height: 220px;
-    border-radius: 15px;
-    background-image: url(../../../public/images/solventa.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+.card-description {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px 10px;
+}
+.img-project {
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover;
+  border-radius: 15px;
+}
 
-  }
+.card-description-text h1,
+p {
+  color: var(--color-secondary) !important;
+  margin: 0px;
+}
 
-  @media (max-width: 992px) {
-    .card {
-      flex: 0 0 calc((100% - 20px) / 2); /* 2 columnas */
-    }
+.card-description-actions {
+  display: flex;
+  align-items: center;
+  column-gap: 5px;
+}
+
+.card-description h1 {
+  font-size: clamp(1.3rem, 0.5vw, 2rem);
+  font-weight: 500;
+}
+
+.card-description p {
+  font-size: clamp(1rem, 0.5vw, 2rem);
+  font-weight: 300;
+}
+
+.stack-project {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  column-gap: 5px;
+  margin-top: 10px;
+}
+
+.img-project-wrapper {
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16 / 9; /* O la proporción que prefieras */
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+@media (width < 576px) {
+  .custom-card {
+    flex: 0 0 calc(100%);
   }
-  
-  @media (max-width: 576px) {
-    .card {
-      flex: 0 0 100%; /* 1 columna */
-    }
+  .card-description {
+    flex-direction: column;
+    row-gap: 20px;
+  }.img-project{
+    height: 180px;
   }
+}
+
+@media (width <= 768px) {
+}
+
+@media (width > 992px) {
+}
+
+@media (width >= 1200px) {
+}
+
+@media (768px <= width <= 992px) {
+}
