--- a/src/styles/works.css
+++ b/src/styles/works.css
@@ -17,3 +17,28 @@
     flex-wrap: wrap;
     gap: 20px;
 }
+.tab-content{
+    border: 1px solid #dee2e6;
+    padding: 10px;
+    border-radius: 0px 15px 15px 15px;
+}
+
+#portfolio-tab-example{
+    border-bottom: none !important;
+}
+
+.tab-content > .active{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 20px;
+    padding: 20px 10px;
+    box-shadow: inset 0 30px 60px -12px rgba(50, 50, 93, .25), inset 0 18px 36px -18px rgba(0, 0, 0, .3);
+    border-radius: 15px;
+}
+#portfolio-tab-example .nav-link{
+    color: var(--background-secondary);
+}
+#portfolio-tab-example .nav-link.active {
+    font-weight: bold;
+}
