fix: ajustes skills

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -126,6 +126,10 @@ a ,h1{
   scroll-margin-top: 8vh;
 }
 
+.swiper-button-prev, .swiper-button-next{
+  color: var(--color-secondary) !important;
+}
+
 @media (width < 576px) {
 }
 
