--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -46,3 +46,9 @@
     box-shadow: 0 8px 60px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
 }
+
+@media (width < 576px) {
+  .container-skills {
+    background-size: cover;
+  }
+}
