--- a/src/styles/skills.css
+++ b/src/styles/skills.css
@@ -33,7 +33,7 @@
     height: 150px !important;
     border-radius: 16px;
     backdrop-filter: blur(10px);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border: 1px solid rgba(255, 255, 255, 0.12);
     padding: 20px;
 }
